style.css
body {
  overflow-x: hidden;
  
}


/* ..........................NAVBAR............................. */
.navbar__custom {
  position: fixed;
  top:0%;
  z-index: 100;
  background-color: white;
  width: 100%;
}

.side__navbar {
  position: fixed;
  top:10%;
  left: 0%;
  width: 70px;
  height: 400px;
  background-color: grey;
  font-size: 12px;
}

.side__navbar__list {
  list-style-type: none;
  position: absolute;
  left:-30px;
  top: 1%;
}

.side__navbar__list li {
  margin: 30px 0 30px 0;
}

.side__navbar__list a {
  color: black;
  text-decoration: none;
}

.searchbar {
  /* width: 540px; */
  width: 48%;
  margin: 0 0 0 auto;
  border-radius: 1px;
}

.searchbar:focus {
 box-shadow: none;
 border:1px solid blue;
 box-shadow: inset 0 0 0 2px rgba(0,0,0,0.1);
}

.btn__search {
  width: 65px;
  border-radius: 1px 0 1px 0;
  background-color:#F8F8F8;
  border: 1px solid lightgrey;
}

.btn__search:hover {
  background-color:#F0F0F0;
  box-shadow: 0 1px 0 rgba(0,0,0,0.1);
  border: 1px solid lightgrey;
}

.search__icon {
  color: rgb(50, 50, 50);
}

.navbar__mic__container {
  background-color: #F9F9F9;
  border-radius: 50%;
  width: 40px;
  margin-left: 5px;
  display: flex;
  justify-content: center;
}

.category__bar {
  position:fixed;
  top: 60px;
  background-color: white;
  z-index: 100;
  width: 100%;
  overflow: hidden; 
  height: 55px;
  margin-left: 70px;
}

.rounded-pill {
  color:black;
  font-size:15px;
  font-weight: 400;
  background-color: rgb(244, 244, 244);
  margin: 14px 0 7px 7px;
  border-radius: 10px;
  border: 1px solid lightgrey;
}

.rounded-pill:hover {
  background-color: #E5E5E5;
  transition: .3s;
}

.hide__pill {
   background: rgb(255,255,255);
  background: linear-gradient(274deg, rgba(255,255,255,1) 79%, rgba(0,0,0,0) 96%); ;
  position: fixed;
  top: 60px;
  right: 0;
  border: none;
  border-radius: 0px;
  width: 40px;
  height: 50px;

}

.logo {
  transform: scale(1.3);
  color: red;
}

.logo__link {
  font-size: 18px;
  font-weight: 700;
}

.bell__icon {
  color: black;
  transform:scale(1.2);
}

.notifications {
  width: 50vw;
  height: 600px;
}

.notification__menu__bell__icon {
  font-size: 64px;
  position: absolute;
  top: 30%;
  left: 45%;
  color:grey;
}

.notifaction__menu__text {
  position: absolute;
  top:50%;
  left:34%;
  color:grey;
  font-size: 16px;
  font-weight: 600;
}

.dropdown__menu__icon{
  font-size: 16px;
  margin-right: 10px;
}

.dropdown-item {
  font-size: 14px;
  margin-bottom: 10px;
}

.dropdown-menu {
  border-radius: 0;
  /* position: relative;
  z-index: 10000; */
}

.dropdown__big {
  height: 90vh;
  overflow: hidden;
}

.dropdown__big:hover {
  overflow-y:scroll;
}

@media screen and (max-width: 809px) {
  .side__navbar {
    display:none;
  }
}
/* ...........................MAIN CONTENT.......................... */

.container__main {
  margin: 130px 25px 0 90px;
  background-color: #F9F9F9;
}

/* .content__row {
  height: 30%;
} */

.video__block {
  position: relative;
  background-color: #F9F9F9;
  margin-top: 10px;
}

.video__block:hover {
  transform: scale(1.25);
  transition: ease;
  transition-delay: 1s;
  transition-duration: .75s;
  z-index: 1000;
}

/* .video__info__block {
  float:right;
} */

.length__tag {
  position: absolute;
  background-color: black;
  opacity: calc(.85);
  width: 35px;
  color:white;
  font-size: 12px;
  font-weight: 550;
  border-radius: 2px;
  top: 135px;
  right: 15px;
  
}

.video {
display: none;
}

/* .video:hover::before {
  display: block;
} */

.length__tag__time {
  position: relative;
  text-align: center;
}

.video__thumbnail {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.video__thumbnail__container {
  /* max-height: 155px; */
  /* position: relative; */
  height:155px;
}

.profile__picture {
  border-radius: 50%;
  height: 35px;
  width: 35px;
  float:left;
}

.video__title {
  font-weight: 600;
  font-size: 14px;
}

.profile__name {
  font-size: 12px;
  color: rgb(83, 82, 82);
  font-weight: 500;
  margin-bottom: 0;
}

.video__views {
  color: rgb(83, 82, 82);
  font-weight: 500;
  font-size: 12px;
}

.muscle {
  object-position: top;
}

.soccer {
  object-position: 0 25%;
}

/* .artwork {
  object-fit: contain;
} */

@media screen and (min-width: 515px) and (max-width: 809px){
  .container__main {
    margin: 0;
  }
}

@media screen and (max-width: 514px) {
  .container__main {
    margin: 0 55px 0 55px;
  }
}

